--- a/soundcloud-fake/package.json
+++ b/soundcloud-fake/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.15",
+    "path-to-regexp": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
