--- a/soundcloud-fake/package.json
+++ b/soundcloud-fake/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.11.0",
     "gapi-script": "^1.2.0",
     "google-auth-library": "^9.7.0",
     "jsonwebtoken": "^9.0.2",
